Fix form label alignment and stuff.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -258,3 +258,7 @@ table.callingPoints {
             margin-left: 8px;
     }
 }
+
+.control-label-left {
+    text-align: left !important;
+}
